Fix Dockerfile for Render (mvn direct)